correction bug contraste

--- a/assets/style.css
+++ b/assets/style.css
@@ -359,3 +359,6 @@ input[type="submit"] {
 	}
 }
 
+.visually-hidden{
+	color: #000;
+}
